--- a/blocks/form-text/form-text.css
+++ b/blocks/form-text/form-text.css
@@ -27,24 +27,30 @@
 .form-text_inputted{
   color: black;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .form-text {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .form-text {
     max-width: 600px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .form-text {
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .form-text {
+    height: 55px;
+
   }
 }
 @media screen and (max-width: 320px) {
   .form-text {
-    height: 30px;
+    height: 55px;
 
   }
 }
