--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -17,6 +17,11 @@
 .popup__input:last-of-type {
   /*margin-bottom: 24px;*/
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .popup__input{
+    padding: 4px 0 7px;
+  }
+}
 @media screen and (max-width: 320px) {
   .popup__input{
     padding: 4px 0 7px;
