--- a/blocks/results/__cards/results__cards.css
+++ b/blocks/results/__cards/results__cards.css
@@ -4,29 +4,61 @@
   display: grid;
   justify-content: center;
   width: auto;
+  grid-gap: 18px 18px;
 }
-
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1441px)  {
   .results__cards{
     grid-template-columns: repeat(auto-fill, 395px);
     grid-gap: 18px 18px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .results__cards{
     grid-template-columns: repeat(auto-fill, 395px);
     grid-gap: 18px 18px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .results__cards{
-    grid-template-columns: repeat(3, 224px);
+    grid-template-columns: repeat(auto-fill, 395px);
+    grid-gap: 18px 18px;
+  }
+}
+@media (min-width: 660px) and (max-width: 768px)  {
+  .results__cards{
+    grid-template-columns: repeat( auto-fill, 280px);
     grid-gap: 10px 10px;
   }
 }
+@media screen and (max-width: 660px) {
+  .results__cards{
+    min-width: unset;
+    grid-template-columns: repeat(auto-fill, 280px);
+  }
+}
+@media screen and (max-width: 520px) {
+  .results__cards{
+    min-width: unset;
+    grid-template-columns: repeat(auto-fill, 280px);
+  }
+}
+@media screen and (max-width: 425px) {
+  .results__cards{
+    min-width: unset;
+    grid-template-columns: repeat(1, 280px);
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .results__cards{
+    min-width: unset;
+    grid-template-columns: repeat(1, 280px);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .results__cards{
     min-width: unset;
-    grid-template-columns: repeat(1, 224px);
+    grid-template-columns: repeat(1, 280px);
+    margin-bottom: 20px;
   }
 }
