--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,20 +6,55 @@
   font-family: Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1440px;
+  /*max-width: 1440px;*/
+  margin: auto;
 }
-
-@media screen and (max-width: 1280px) {
+@media (min-width: 1441px) {
+  .root{
+    max-width: 1440px;
+  }
+}
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .root{
     max-width: 1280px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
+  .root{
+    max-width: 1024px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px)  {
   .root {
-    max-width: 768px;
+    max-width: 769px;
 
   }
 }
+@media (min-width: 421px) and (max-width: 768px)  {
+  .root {
+    max-width: 421px;
+
+  }
+}
+@media (min-width: 376px) and (max-width: 420px)  {
+  .root {
+    max-width: 376px;
+
+  }
+}
+@media (min-width: 376px) and (max-width: 425px) {
+  .root {
+    max-width: 376px;
+
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .root {
+    max-width: 320px;
+
+  }
+}
+
 @media screen and (max-width: 320px) {
   .root {
     max-width: 320px;
