--- a/blocks/author/__about/author__about.css
+++ b/blocks/author/__about/author__about.css
@@ -3,17 +3,34 @@
   display: flex;
   flex-direction: row;
   margin: 80px 216px 80px 104px;
+  height: auto;
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .author__about {
-    max-width: 1280px;
+    max-width: 1024px;
     margin: 80px 216px 80px 104px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
   .author__about {
     max-width: 768px;
-    margin: 61px 40px 61px 40px;
+    margin: 0;
+    flex-direction: column;
+  }
+}
+@media (min-width: 376px) and (max-width: 768px)  {
+  .author__about {
+    max-width: 376px;
+    margin: 0;
+    flex-direction: column;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .author__about {
+    max-width: 320px;
+    margin: 0;
+    flex-direction: column;
+    padding: 32px 0 0;
   }
 }
 @media screen and (max-width: 320px) {
