--- a/blocks/author/__info-text/author__info-text.css
+++ b/blocks/author/__info-text/author__info-text.css
@@ -10,21 +10,27 @@
   text-align: left;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .author__info-text{
     min-width: 600px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .author__info-text {
     min-width: unset;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .author__info-text {
     min-width: unset;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .author__info-text {
+    min-width: unset;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .author__info-text {
     min-width: unset;
