--- a/blocks/author/__info-title/author__info-title.css
+++ b/blocks/author/__info-title/author__info-title.css
@@ -10,23 +10,29 @@
 }
 
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .author__info-title{
     display: flex;
     flex-direction: column;
     padding-left: 56px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .author__info-title {
     padding: 0;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .author__info-title {
     padding: 0;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .author__info-title {
+    padding: 0;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .author__info-title {
     padding: 0;
