--- a/blocks/author/__info/author__info.css
+++ b/blocks/author/__info/author__info.css
@@ -1,25 +1,54 @@
+.author__info{
+  display: flex;
+  flex-direction: column;
+  padding-left: 56px;
+  height: auto;
+}
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .author__info{
     display: flex;
     flex-direction: column;
     padding-left: 56px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .author__info {
-    max-height: 486px;
+
     max-width: 486px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
   .author__info {
-    max-width: 424px;
+    max-width: 769px;
+    padding-left: 20px;
+  }
+}
+@media (min-width: 376px) and (max-width: 768px)  {
+  .author__info {
+    max-width: 376px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (min-width: 376px) and (max-width: 768px)  {
+  .author__info {
+    max-width: 376px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .author__info {
+    max-width: 288px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 @media screen and (max-width: 320px) {
   .author__info {
     max-width: 288px;
-    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
