--- a/blocks/author/author.css
+++ b/blocks/author/author.css
@@ -8,17 +8,49 @@
   display: flex;
   flex-direction: row;
   background: #FFFFFF;
+  height: auto;
+  margin: auto;
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1441px) {
+  .author {
+    max-width: 1440px;
+
+  }
+}
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .author {
     max-width: 1280px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
+  .author {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px)  {
   .author {
     max-width: 768px;
 
+  }
+}
+@media (min-width: 421px) and (max-width: 768px)  {
+  .author {
+    max-width: 421px;
+
+  }
+}
+@media (min-width: 376px) and (max-width: 420px)  {
+  .author {
+    max-width: 375px;
+
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .author {
+    max-width: 320px;
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media screen and (max-width: 320px) {
