--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -7,7 +7,7 @@
   font-size: 30px;
   display: block;
   cursor: pointer;
-  font-family: Roboto;
+  font-family: Robotoб sans-serif;
 }
 
 .button:focus {
