--- a/blocks/card/__source/card__source.css
+++ b/blocks/card/__source/card__source.css
@@ -13,17 +13,22 @@
   margin: auto 0 24px;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .card__source{
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .card__source{
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .card__source {
     margin-top: 5px;
+
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .card__source{
 
   }
 }
