--- a/blocks/card/__text/card__text.css
+++ b/blocks/card/__text/card__text.css
@@ -14,15 +14,15 @@
   margin: 0 0 auto;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .card__text{
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .card__text{
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .card__text {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -31,6 +31,11 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .card__text{
+    min-width: unset;
   }
 }
 @media screen and (max-width: 320px) {
