--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -10,19 +10,19 @@
   padding-top: 12px;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .card__title{
     font-size: 26px;
     line-height: 30px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .card__title{
     font-size: 26px;
     line-height: 30px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .card__title{
     max-height: 72px;
     text-overflow: ellipsis;
@@ -36,6 +36,12 @@
     min-height: 72px;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .card__title{
+    min-width: unset;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .card__title{
     min-width: unset;
