--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -12,23 +12,30 @@
   background: #FFFFFF;
   display: flex;
   flex-direction: column;
+  max-width: 400px;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .card{
-
+    max-width: 400px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .card{
-
+    max-width: 400px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .card{
-    max-height: 430px;
+    /*max-height: 430px;*/
     text-overflow: ellipsis;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .card{
+    min-width: unset;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .card{
     min-width: unset;
