--- a/blocks/copyright/copyright.css
+++ b/blocks/copyright/copyright.css
@@ -8,21 +8,33 @@
   line-height: 22px;
   color: #B6BCBF;
   margin: 0;
-}@media screen and (max-width: 1440px) {
+}@media (min-width: 1281px) and (max-width: 1440px)  {
   .copyright{
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .copyright{
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .copyright {
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .copyright{
+    order: 2;
+    margin-top: 40px;
+    width: 100%;
+    align-self: center;
+    margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 320px) {
   .copyright{
     order: 2;
     margin-top: 40px;
+    align-self: center;
+    margin-bottom: 20px;
+
   }
 }
