--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,30 +5,43 @@
   flex-direction: row;
   margin: 0;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .footer__links{
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .footer__links{
 
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .footer__links{
-  }
-}
-@media screen and (max-width: 320px) {
-  .footer__links {
-    /*position: absolute;*/
-    /*justify-content: space-between;*/
-    /*align-content: space-between;*/
-
     align-items: start;
     justify-content: space-between;
-    width: 288px;
+    max-width: 288px;
     order:1;
-    padding-top: 100px;
+    padding-top: 50px;
     min-height: 80px;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .footer__links {
+    align-items: start;
+    justify-content: space-between;
+    max-width: 288px;
+    order:1;
+    padding-top: 50px;
+    min-height: 80px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__links {
+    align-items: start;
+    justify-content: space-between;
+    order:1;
+    padding-top: 50px;
+    min-height: 80px;
+    min-width: 288px;
   }
 }
