--- a/blocks/form-button/form-button.css
+++ b/blocks/form-button/form-button.css
@@ -29,19 +29,30 @@
 
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .form-button {
 
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .form-button {
 
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .form-button {
+
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .form-button {
+    height: 56px;
+    max-width: 288px;
+    background: #2F71E5;
+    box-shadow: 0 5px 15px rgba(14, 26, 57, 0.2);
+    margin-top: 25px;
+    line-height: 56px;
 
   }
 }
