--- a/blocks/form-field/form-field.css
+++ b/blocks/form-field/form-field.css
@@ -11,22 +11,37 @@
 margin: 0;
   border-radius: 100px;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .form-field {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .form-field {
     max-width: 600px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
   .form-field {
-    max-width: 452px;
+    max-width: 600px;
   }
 }
+@media (min-width: 376px) and (max-width: 768px)  {
+  .form-field {
+    max-width: 376px;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .form-field {
+    flex-direction: column;
+    max-width: 288px;
+    height: 56px;
+    /*justify-content: center;*/
+  }
+}
+
+
 @media screen and (max-width: 320px) {
   .form-field {
     flex-direction: column;
