--- a/blocks/header/__buttons/header__buttons.css
+++ b/blocks/header/__buttons/header__buttons.css
@@ -5,25 +5,36 @@
   align-content: center;
   justify-content: space-between;
   margin-bottom: -2px;
-
+  padding-right: 104px;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .header__buttons {
     padding-right: 104px;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .header__buttons {
     padding-right: 40px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .header__buttons {
     padding-right: 40px;
+    flex-direction: column;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .header__buttons {
+    padding-right: 20px;
+    max-width: 24px;
+    max-height: 24px;
+    padding-top: 7px;
+
+  }
+}
+
 @media screen and (max-width: 320px) {
   .header__buttons {
     padding-right: 20px;
