--- a/blocks/header/__main/header__main.css
+++ b/blocks/header/__main/header__main.css
@@ -10,8 +10,9 @@
 
 .header__main-login {
   border-bottom: 1px solid #A5A5A5;
+  width: 100%;
 }
-.header__main_login-theme-white{
+.header__main-login-theme-white{
   color: black;
 }
 
@@ -19,22 +20,50 @@
   background-color: #FFFFFF;
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .header__main {
     width: 100%;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .header__main  {
     width: 100%;
 
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .header__main  {
+    width: 100%;
+    border-bottom: grey solid 0.5px;
+
+  }
+  .header__main-login_theme-dark{
+    background: black;
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 16px;
+    border-bottom-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .header__main  {
     width: 100%;
     border-bottom: grey solid 0.5px;
 
+  }
+  .header__main-login_theme-dark{
+    background: black;
+    max-width: 320px;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 16px;
+    border-bottom-color: rgba(255, 255, 255, 0.2);
   }
 }
 
