--- a/blocks/header/__search-title/header__search-title.css
+++ b/blocks/header/__search-title/header__search-title.css
@@ -12,22 +12,32 @@
   max-width: 576px;
   margin: 0;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .header__search-title {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .header__search-title {
     max-width: 600px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .header__search-title {
-    max-width: 452px;
+    max-width: 376px;
   }
 }
+@media (min-width: 321px) and (max-width: 375px) {
+  .header__search-title {
+    max-width: 285px;
+    font-size: 36px;
+    max-height: 80px;
+    line-height: 40px;
+
+  }
+}
+
 @media screen and (max-width: 320px) {
   .header__search-title {
     max-width: 285px;
