--- a/blocks/header/__search/header__search.css
+++ b/blocks/header/__search/header__search.css
@@ -6,24 +6,36 @@
   min-height: 496px;
   align-items: start;
   justify-content: center;
+  margin: auto;
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .header__search {
     max-width: 600px;
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .header__search {
     max-width: 600px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
   .header__search {
-    max-width: 452px;
+    max-width: 600px;
   }
 }
+@media (min-width: 376px) and (max-width: 768px)  {
+  .header__search {
+    max-width: 376px;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .header__search {
+    max-width: 285px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .header__search {
     max-width: 285px;
