--- a/blocks/marker-frame/marker-frame.css
+++ b/blocks/marker-frame/marker-frame.css
@@ -6,22 +6,28 @@
   background: #FFFFFF;
   border-radius: 8px;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-top: 24px;
+  margin-right: 24px;
 
 }
-@media screen and (max-width: 1440px) {
+
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .marker-frame{
     margin-top: 24px;
+    margin-right: 24px;
 
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .marker-frame{
     margin-top: 24px;
+    margin-right: 24px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .marker-frame{
     margin-top: 8px;
   }
@@ -32,22 +38,29 @@
   }
 }
 .marker-frame_info{
-  min-width: 182px;
-  height: 40px;
-  margin-right: 5px;
+
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .marker-frame_info{
-
+    min-width: 182px;
+    height: 40px;
+    margin-right: 5px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .marker-frame_info{
-
+    min-width: 182px;
+    height: 40px;
+    margin-right: 5px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
+  .marker-frame_info{
+    display: none;
+  }
+}
+@media (min-width: 376px) and (max-width: 768px)  {
   .marker-frame_info{
     display: none;
   }
@@ -58,21 +71,21 @@
   }
 }
 .marker-frame_saved{
-  min-width: 150px;
+  min-width: 100px;
   height: 40px;
   margin-right: 5px;
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .marker-frame_saved {
 
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .marker-frame_saved {
 
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .marker-frame_saved {
     display: none;
 
@@ -80,29 +93,66 @@
 }
 @media screen and (max-width: 320px) {
   .marker-frame_saved {
-
+display: none;
   }
 }
 .marker-frame_tag {
   /*margin-right: 80px;*/
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .marker-frame_tag {
-
+    margin-right: 24px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .marker-frame_tag {
-
+    margin-right: 24px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .marker-frame_tag {
+    margin-right: 24px;
+  }
+
+}
+@media screen and (max-width: 660px) {
+  .marker-frame_tag {
+    margin-right: 15px;
+  }
+  .marker-frame_delete {
+    max-width: 40px;
+    margin-left: 25px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .marker-frame_tag {
+    margin-right: 15px;
+  }
+  .marker-frame_delete {
+    max-width: 40px;
+    margin-left: 25px;
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .marker-frame_tag {
+    margin-right: 5px;
+  }
+  .marker-frame_delete {
+    max-width: 40px;
+    margin-left: 25px;
+  }
+  .marker-frame_saved {
+    display: none;
 
   }
 }
 @media screen and (max-width: 320px) {
   .marker-frame_tag {
+    margin-right: 5px;
+  }
 
+  .marker-frame_delete {
+    max-width: 40px;
+    margin-left: 25px;
   }
 }
