--- a/blocks/marker-image/marker-image.css
+++ b/blocks/marker-image/marker-image.css
@@ -6,7 +6,7 @@
   margin-bottom: 10px;
   margin-top: 10px;
   box-sizing: border-box;
-  background-image: url("./images/marker.svg");
+  background-image: url("../../images/marker.svg");
   background-size: cover;
   background-color: transparent;
   border: none;
@@ -15,10 +15,10 @@
   outline: none;
 }
 .marker-image:hover{
-  background-image: url("./images/marker_hover.svg");
+  background-image: url("../../images/marker_hover.svg");
 }
 .marker-image:active{
-  background-image: url("./images/marker_marked.svg");
+  background-image: url("../../images/marker_marked.svg");
 }
 .marker-image_saved{
   height: 19px;
@@ -26,7 +26,7 @@
   margin-bottom: 10px;
   margin-top: 10px;
   box-sizing: border-box;
-  background-image: url("./images/trash.svg");
+  background-image: url("../../images/trash.svg");
   background-size: cover;
   background-color: transparent;
   border: none;
@@ -35,5 +35,5 @@
   outline: none;
 }
 .marker-image_saved:hover{
-  background-image: url("./images/trash_marked.svg");
+  background-image: url("../../images/trash_marked.svg");
 }
