--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -14,3 +14,15 @@
 .popup__button_plus {
   margin-top: 34px;
 }
+
+@media (min-width: 321px) and (max-width: 375px) {
+  .popup__button {
+
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .popup__button {
+
+  }
+}
