--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -8,7 +8,7 @@
   padding: 24px 36px 34px;
 }
 .popup__content_signup{
-  max-height: 458px;
+  /*max-height: 458px;*/
 }
 
 @media screen and (max-width: 540px) {
@@ -17,33 +17,74 @@
   }
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .popup__content{
-    width: 430px;
+    max-width: 430px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .popup__content{
-    width: 430px;
+    max-width: 430px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .popup__content{
-    width: 430px;
-    max-height: 380px;
+    max-width: 320px;
+    height: 560px;
+    /*padding: 14px 16px 14px;*/
+    max-height: 560px;
+    padding: 17px 16px 14px;
   }
   .popup__content_signup{
-    max-height: 458px;
+    /*max-height: 458px;*/
+  }
+  .popup_content_theme-dark{
+    max-height: 50%;
+    border-radius:0;
+    /*background: black;*/
   }
 
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .popup__content{
+    max-width: 375px;
+    height: 560px;
+    /*padding: 14px 16px 14px;*/
+    max-height: 540px;
+    padding: 17px 16px 14px;
+  }
+  .popup__content_signup{
+    max-height: 560px;
+  }
+  .popup_content_theme-dark{
+    max-height: 50%;
+    border-radius:0;
+    /*background: black;*/
+  }
+  .popup_content_theme-dark{
+    width: 100%;
+    height: 40%;
+    border-radius:0;
+    margin: 0;
+    background: black;
+  }
 }
 @media screen and (max-width: 320px) {
   .popup__content{
     max-width: 320px;
     height: 560px;
-    padding: 14px 16px 14px;
+    /*padding: 14px 16px 14px;*/
+    max-height: 540px;
+    padding: 17px 16px 14px;
   }
   .popup__content_signup{
     max-height: 560px;
+  }
+  .popup_content_theme-dark{
+    width: 320px;
+    height: 40%;
+    border-radius:0;
+    margin: 0;
+    background: black;
   }
 }
