--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -7,3 +7,11 @@
   line-height: 28px;
   color: #1A1B22;
 }
+.popup__title_theme-dark{
+  color: white;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 56px;
+}
