--- a/blocks/results/__saved-name/results__saved-name.css
+++ b/blocks/results/__saved-name/results__saved-name.css
@@ -11,19 +11,19 @@
   margin: auto;
 
 }
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .results__saved-name{
     padding-top: 30px;
     padding-bottom: 56px;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .results__saved-name{
     padding-top: 30px;
     padding-bottom: 56px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 376px) and (max-width: 768px)  {
   .results__saved-name{
     padding-top: 0;
     padding-bottom: 16px;
