--- a/blocks/results/__title/results__title.css
+++ b/blocks/results/__title/results__title.css
@@ -7,6 +7,12 @@
   font-size: 40px;
   line-height: 46px;
   color: #1A1B22;
+  align-self: start;
+  /*padding-left: 40px;*/
+  /*display: grid;*/
+  /*justify-content: center;*/
+  /*width: 100%;*/
+  /*grid-template-columns: repeat(auto-fill, 395px);*/
 }
 .results__title_saved{
   max-width: 500px;
@@ -14,24 +20,79 @@
   margin: 0;
 
 }
-@media screen and (max-width: 1440px) {
+
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .results__title_saved{
     padding-top: 28px;
+    padding-left: 0 !important;
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    align-self: center;
   }
 }
-@media screen and (max-width: 1280px) {
+@media (min-width: 1025px) and (max-width: 1280px)  {
   .results__title_saved{
     padding-top: 28px;
+    padding-left: 0 !important;
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    align-self: center;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 769px) and (max-width: 1024px)  {
   .results__title_saved{
     padding-top: 0;
+    max-width: 400px;
+    padding-left: 0 !important;
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    align-self: center;
   }
 }
+@media (min-width: 426px) and (max-width: 768px)  {
+  .results__title_saved{
+    padding-top: 0;
+    max-width: 400px;
+    padding-left: 0 !important;
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    /*grid-template-columns: repeat(auto-fill, 395px);*/
+  }
+}
+@media (min-width: 376px) and (max-width: 425px) {
+  .results__title_saved{
+    max-width: 200px;
+    padding-left: unset;
+
+  }
+}
+@media (min-width: 321px) and (max-width: 375px) {
+  .results__title_saved{
+    max-width: 200px;
+    padding-left: unset;
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    align-self: center;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .results__title_saved{
+    max-width: 200px;
+    padding-left: unset;
 
+  }
+  .results__title_not-logged{
+
+  }
+  .results__title{
+    /*padding-left: 40px;*/
+    align-self: center;
   }
 }
 
