--- a/blocks/results/results.css
+++ b/blocks/results/results.css
@@ -5,7 +5,61 @@
 @import url(./__saved-name/results__saved-name.css);
 @import url(./__saved-tags/results__saved-tags.css);
 
-
 .results_saved{
-  background: white;
+  background: #F2F2F2;
 }
+
+@media (min-width: 1441px) {
+  .results_saved{
+    background: white;
+    max-width: 1440px;
+    margin: auto;
+  }
+}
+@media (min-width: 1281px) and (max-width: 1440px)  {
+  .results_saved{
+    background: white;
+    max-width: 1280px;
+    margin: auto;
+  }
+}
+@media (min-width: 1025px) and (max-width: 1280px)  {
+  .results_saved{
+    background: white;
+    max-width: 1024px;
+    margin: auto;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px)  {
+  .results_saved{
+    background: white;
+    max-width: 768px;
+    margin: auto;
+  }
+}
+@media (min-width: 421px) and (max-width: 768px)  {
+  .results_saved{
+    background: white;
+    max-width: 421px;
+    margin: auto;
+  }
+}
+@media (min-width: 376px) and (max-width: 420px)  {
+  .results_saved{
+    background: white;
+    max-width: 375px;
+    margin: auto;
+  }
+}
+@media (min-width: 320px) and (max-width: 375px)  {
+  .results_saved{
+    background: white;
+    max-width: 320px;
+    margin: auto;
+  }
+}
+/*@media screen and (max-width: 320px) {*/
+/*  .preloader-container {*/
+/*    min-width: unset;*/
+/*  }*/
+/*}*/
