--- a/blocks/search/seach.css
+++ b/blocks/search/seach.css
@@ -8,7 +8,7 @@
 
 }
 
-@media screen and (max-width: 1440px) {
+@media (min-width: 1281px) and (max-width: 1440px)  {
   .search{
     padding-top: 232px;
     padding-left: 132px;
@@ -16,7 +16,7 @@
     max-width: 1440px;
   }
 }
-/*@media screen and (max-width: 1280px) {*/
+/*@media (min-width: 1025px) and (max-width: 1280px)  {*/
 /*  .search{*/
 /*    padding-top: 232px;*/
 /*    padding-left: 132px;*/
@@ -24,7 +24,7 @@
 /*    max-width: 1280px;*/
 /*  }*/
 /*}*/
-/*@media screen and (max-width: 768px) {*/
+/*@media (min-width: 376px) and (max-width: 768px)  {*/
 /*  .search {*/
 /*    padding: 40px;*/
 /*    max-width: 768px;*/
