--- a/pages/index.css
+++ b/pages/index.css
@@ -2,15 +2,29 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
-/*@import url(../blocks/logo/logo.css);*/
-/*@import url(../blocks/profile/profile.css);*/
-/*@import url(../blocks/user-info/user-info.css);*/
-/*@import url(../blocks/button/button.css);*/
+@import url(../blocks/search/seach.css);
+@import url(../blocks/form-field/form-field.css);
+@import url(../blocks/form-text/form-text.css);
+@import url(../blocks/form-button/form-button.css);
+@import url(../blocks/buttons-showmorebutton/buttons-showmorebutton.css);
+@import url(../blocks/form-lockedbutton/form-lockedbutton.css);
+@import url(../blocks/author/author.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/varn/warn.css);
+@import url(../blocks/preloader/preloader.css);
+@import url(../blocks/results/results.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/copyright/copyright.css);
+@import url(../blocks/marker-frame/marker-frame.css);
+@import url(../blocks/marker-image/marker-image.css);
+@import url(../blocks/marker-info/marker-info.css);
 /*@import url(../blocks/places-list/places-list.css);*/
 /*@import url(../blocks/place-card/place-card.css);*/
-/*@import url(../blocks/popup/popup.css);*/
-/*@import url(../blocks/varn/warn.css);*/
 
 body {
-  background-color: #1A1B22;
+    background-color: #1A1B22;
+  /*max-width: 1440px;*/
+  margin: auto;
 }
+
