--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -21,7 +21,7 @@ width: 100%;
     width: 100%;
   }
 }
-@media (min-width: 769px) and (max-width: 1024px)  {
+@media (min-width: 768px) and (max-width: 1024px)  {
   .footer__container {
     min-width: unset;
     flex-direction: row;
@@ -33,7 +33,18 @@ width: 100%;
     width: 100%;
   }
 }
-@media (min-width: 376px) and (max-width: 768px)  {
+@media (min-width: 421px) and (max-width: 767px)  {
+  .footer__container {
+    min-width: unset;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    justify-content: space-around;
+    align-content: space-around;
+    padding: 0;
+  }
+}
+@media (min-width: 376px) and (max-width: 420px)  {
   .footer__container {
     min-width: unset;
     flex-direction: column;
