--- a/blocks/header/__buttons/header__buttons.css
+++ b/blocks/header/__buttons/header__buttons.css
@@ -19,7 +19,13 @@
     padding-right: 40px;
   }
 }
-@media (min-width: 376px) and (max-width: 768px)  {
+@media (min-width: 768px) and (max-width: 1024px)  {
+  .header__buttons {
+    padding-right: 40px;
+
+  }
+}
+@media (min-width: 376px) and (max-width: 767px)  {
   .header__buttons {
     padding-right: 40px;
     flex-direction: column;
