--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -53,22 +53,25 @@ margin: auto;
 
   }
 }
-@media (min-width: 769px) and (max-width: 1024px)  {
+@media (min-width: 768px) and (max-width: 1024px)  {
   .header {
-    max-width: 769px;
-    background-image:url("../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg");
-    background-size: cover;
+    max-width: 768px;
+    background:url("../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg") no-repeat center center;
+    /*background-size: cover;*/
+    /*background-size: 768px 581px;*/
+    object-fit: cover;
+
   }
   .header_theme-white {
     min-height: unset;
     background: white;
   }
 }
-@media (min-width: 421px) and (max-width: 768px)  {
+@media (min-width: 421px) and (max-width: 767px)  {
   .header {
     max-width: 421px;
     background-image:url("../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.jpg");
-    background-size: cover;
+    object-fit: cover;
   }
   .header_theme-white {
     min-height: unset;
