--- a/blocks/results/__title/results__title.css
+++ b/blocks/results/__title/results__title.css
@@ -49,7 +49,7 @@
   }
   .results__title{
     /*padding-left: 40px;*/
-    align-self: center;
+    /*align-self: center;*/
   }
 }
 @media (min-width: 426px) and (max-width: 768px)  {
