--- a/src/blocks/marker-frame/marker-frame.css
+++ b/src/blocks/marker-frame/marker-frame.css
@@ -23,6 +23,9 @@
   height: 40px;
   margin-right: 5px;
 }
+.marker-frame_info{
+  position: absolute;
+}
 @media (min-width: 1441px)  {
   .marker-frame{
     margin-top: 24px;
@@ -39,16 +42,21 @@
   .marker-frame_delete{
     top:10px !important;
     right: 10px !important;
+    max-width: 40px;
+    margin-left: 0;
   }
   .marker-frame_tag{
     top:10px !important;
     right: 315px !important;
+    margin-right:0;
   }
   .marker-frame_saved{
     top: 10px;
-    right: 50px;
+    right: 60px;
+    min-width: 150px !important;
   }
 }
+
 
 @media (min-width: 1281px) and (max-width: 1440px)  {
   .marker-frame{
@@ -66,14 +74,18 @@
   .marker-frame_delete{
     top:10px !important;
     right: 10px !important;
+    max-width: 40px;
+    margin-left: 0;
   }
   .marker-frame_tag{
     top:10px !important;
-    right: 285px !important;
+    right: 315px !important;
+    margin-right:0;
   }
   .marker-frame_saved{
     top: 10px;
-    right: 50px;
+    right: 60px;
+    min-width: 150px !important;
   }
 }
 @media (min-width: 1025px) and (max-width: 1280px)  {
@@ -92,33 +104,49 @@
   .marker-frame_delete{
     top:10px !important;
     right: 10px !important;
+    max-width: 40px;
+    margin-left: 0;
   }
   .marker-frame_tag{
     top:10px !important;
-    right: 285px !important;
-    margin-right: 24px;
+    right: 315px !important;
+    margin-right:0;
   }
   .marker-frame_saved{
     top: 10px;
-    right: 50px;
+    right: 60px;
+    min-width: 150px !important;
   }
 }
+
 @media (min-width: 768px) and (max-width: 1024px)  {
   .marker-frame{
     margin-top: 8px;
+    right: 0;
   }
   .marker-frame_delete{
     top:10px !important;
     right: 10px !important;
     margin-right: 0;
+    max-width: 40px;
+    margin-left: 25px;
   }
   .marker-frame_tag{
     top:10px !important;
     right: 150px !important;
     min-height: 40px;
     min-width: 65px;
+    margin-right: 0;
+  }
+  .marker-frame_info{
+    display: none;
+  }
+  .marker-frame_saved {
+    display: none;
+
   }
 }
+
 @media (min-width: 426px) and (max-width: 767px)  {
   .marker-frame{
     margin-top: 8px;
@@ -127,145 +155,68 @@
     top:10px !important;
     right: 5px !important;
     margin-right: 5px;
+    max-width: 40px;
+    margin-left: 25px;
   }
   .marker-frame_tag{
     top:10px !important;
     right: 105px !important;
     min-height: 40px;
     min-width: 80px;
+    margin-right: 15px;
   }
 }
 @media (min-width: 376px) and (max-width: 425px)  {
   .marker-frame{
     margin-top: 8px;
+    right: 0;
+    top:10px;
   }
   .marker-frame_delete{
     top:10px !important;
     right: 5px !important;
     margin-right: 5px;
+    max-width: 40px;
+    margin-left: 25px;
   }
   .marker-frame_tag{
     top:10px !important;
-    right: 105px !important;
+    right: 165px !important;
     min-height: 40px;
     min-width: 80px;
-  }
-}
-@media (min-width: 1440px)  {
-  .marker-frame_info{
-    min-width: 182px;
-    height: 40px;
-    margin-right: 5px;
-  }
-  .marker-frame_saved {
-    min-width: 150px !important;
-  }
-  .marker-frame_tag {
-    margin-right:0;
-  }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 0;
-  }
-}
-
-@media (min-width: 1281px) and (max-width: 1440px)  {
-  .marker-frame_info{
-    min-width: 182px;
-    height: 40px;
-    margin-right: 5px;
-  }
-  .marker-frame_saved {
-    min-width: 150px !important;
-  }
-  .marker-frame_tag {
-    margin-right:0;
-  }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 0;
-  }
-}
-@media (min-width: 1025px) and (max-width: 1280px)  {
-  .marker-frame_info{
-    min-width: 182px;
-    height: 40px;
-    margin-right: 5px;
-  }
-  .marker-frame_saved {
-    min-width: 150px !important;
-  }
-  .marker-frame_tag {
-    margin-right:0;
-  }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 0;
-  }
-
-}
-@media (min-width: 769px) and (max-width: 1024px)  {
-  .marker-frame{
-    right: 0;
-  }
-  .marker-frame_info{
-    display: none;
-  }
-  .marker-frame_saved {
-    display: none;
-
-  }
-  .marker-frame_tag {
-    margin-right:0;
-  }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 25px;
-  }
-
-}
-@media (min-width: 376px) and (max-width: 768px)  {
-  .marker-frame_info{
-    display: none;
-  }
-  .marker-frame{
-    right: 0;
-    top:10px;
-  }
-  .marker-frame_tag {
-    margin-right: 24px;
-  }
-}
-@media screen and (max-width: 660px) {
-  .marker-frame_tag {
     margin-right: 15px;
   }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 25px;
-  }
-}
-@media screen and (max-width: 425px) {
-  .marker-frame_tag {
-    margin-right: 15px;
-  }
-  .marker-frame_delete {
-    max-width: 40px;
-    margin-left: 25px;
+  .marker-frame_info{
+    display: none;
   }
 }
 
 @media (min-width: 321px) and (max-width: 375px) {
   .marker-frame_tag {
     margin-right: 5px;
+    top:10px;
+    right: 210px !important;
+    margin-top: 5px;
   }
   .marker-frame_delete {
     max-width: 40px;
     margin-left: 25px;
+    top:10px;
+    margin-top: 5px;
   }
   .marker-frame_saved {
     display: none;
 
+  }
+  .marker-info_saved{
+
+  }
+  .marker-frame{
+    right: 10px;
+    margin-right: 0;
+  }
+  .marker-frame_info{
+    right: 60px !important;
   }
 }
 
@@ -278,10 +229,19 @@
   }
   .marker-frame_tag {
     margin-right: 5px;
+    top:10px;
+    right: 200px !important;
+    margin-top: 5px;
+
   }
   .marker-frame_delete {
     max-width: 40px;
-    margin-left: 25px;
+    top:10px;
+    margin-top: 5px;
+    margin-right: 10px;
+  }
+  .marker-frame{
+    right: 10px;
   }
 
 }
