--- a/src/blocks/marker-frame/marker-frame.css
+++ b/src/blocks/marker-frame/marker-frame.css
@@ -150,6 +150,8 @@
 @media (min-width: 426px) and (max-width: 767px)  {
   .marker-frame{
     margin-top: 8px;
+    right: 0;
+    top:10px;
   }
   .marker-frame_delete{
     top:10px !important;
@@ -164,6 +166,9 @@
     min-height: 40px;
     min-width: 80px;
     margin-right: 15px;
+  }
+  .marker-frame_info{
+    display: none;
   }
 }
 @media (min-width: 376px) and (max-width: 425px)  {
