--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -27,7 +27,7 @@ position: absolute;
 }
 @media (min-width: 426px) and (max-width: 768px) {
   .popup__close {
-    top: 20px;
+    top: 0;
     right: -20px;
     width: 20px;
     height: 17px;
