--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -150,7 +150,7 @@ text-decoration: none;
 
   }
   .header__button-link_inactive{
-    display: none;
+    display: none !important;
   }
   .header__button-link_theme_white {
     background-image: url("../../../images/menu__black.svg") !important;
@@ -162,7 +162,7 @@ text-decoration: none;
 
   }
   .header__button-link_inactive{
-    display: none;
+    display: none !important;
   }
   .header__button-link_theme_white {
     background-image: url("../../../images/menu__black.svg") !important;
@@ -174,7 +174,7 @@ display: none;
 
   }
   .header__button-link_inactive{
-    display: none;
+    display: none !important;
   }
   .header__button-link_theme_white {
     background-image: url("../../../images/menu__black.svg") !important;
