--- a/src/blocks/marker-frame/marker-frame.css
+++ b/src/blocks/marker-frame/marker-frame.css
@@ -46,9 +46,10 @@
     margin-left: 0;
   }
   .marker-frame_tag{
-    top:10px !important;
+    top:4px !important;
     right: 315px !important;
     margin-right:0;
+    left: 5px;
   }
   .marker-frame_saved{
     top: 10px;
@@ -78,9 +79,10 @@
     margin-left: 0;
   }
   .marker-frame_tag{
-    top:10px !important;
+    top:4px !important;
     right: 315px !important;
     margin-right:0;
+    left: 5px;
   }
   .marker-frame_saved{
     top: 10px;
