--- a/src/blocks/marker-info/marker-info.css
+++ b/src/blocks/marker-info/marker-info.css
@@ -4,7 +4,7 @@
   font-family: Roboto,sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 14px;
   line-height: 12px;
   display: flex;
   align-items: center;
@@ -15,4 +15,8 @@
 .marker-info_saved{
   padding: 10px 10px 10px 10px;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  max-width: 100%;
+  /*overflow: hidden;*/
 }
