--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -6,6 +6,7 @@
   position: relative;
   box-sizing: border-box;
   padding: 24px 36px 34px;
+  max-width: 430px;
 }
 .popup__content_signup{
   max-height: 475px;
@@ -58,18 +59,23 @@
   }
   .popup_content_theme-dark{
     max-height: 50%;
+    height: 55%;
+    position: absolute;
+    top: 0;
     border-radius:0;
-    /*background: black;*/
+    margin: 0;
+    background: black;
   }
 
 }
 @media (min-width: 321px) and (max-width: 375px) {
   .popup__content{
-    max-width: 375px;
+    width: 375px;
     height: 560px;
     /*padding: 14px 16px 14px;*/
-    max-height: 540px;
-    padding: 17px 16px 14px;
+    /*max-height: 540px;*/
+    padding: 17px 8px 14px;
+    max-height: 100%;
   }
   .popup__content_signup{
     max-height: 560px;
@@ -81,7 +87,9 @@
   }
   .popup_content_theme-dark{
     width: 100%;
-    height: 40%;
+    height: 55%;
+    position: absolute;
+    top: 0;
     border-radius:0;
     margin: 0;
     background: black;
@@ -89,18 +97,24 @@
 }
 @media screen and (max-width: 320px) {
   .popup__content{
-    max-width: 320px;
+    width: 320px;
     height: 560px;
+    max-height: 80%;
     /*padding: 14px 16px 14px;*/
-    max-height: 540px;
-    padding: 17px 16px 14px;
+    /*max-height: 540px;*/
+    padding: 17px 8px 14px;
   }
   .popup__content_signup{
-    max-height: 560px;
+    max-height: 300px;
+    position: absolute;
+    top:45px;
+
   }
   .popup_content_theme-dark{
     width: 320px;
-    height: 40%;
+    height: 55%;
+    position: absolute;
+    top: 0;
     border-radius:0;
     margin: 0;
     background: black;
