--- a/src/blocks/popup/__field-name/popup__field-name.css
+++ b/src/blocks/popup/__field-name/popup__field-name.css
@@ -10,7 +10,7 @@
   font-size: 12px;
   line-height: 15px;
   color: #2F71E5;
-  padding-top: 22px;
+  padding-top: 18px;
 }
 
 @media (min-width: 1281px) and (max-width: 1440px)  {
@@ -30,12 +30,12 @@
 }
 @media (min-width: 321px) and (max-width: 375px) {
   .popup__field-name{
-    padding-top: 22px;
+    padding-top: 0;
   }
 }
 @media screen and (max-width: 320px) {
   .popup__field-name{
-    padding-top: 22px;
+    padding-top: 0;
   }
 }
 .popup__field-name:last-child{
