--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -2,7 +2,7 @@
 
 .root {
   background-color: #1A1B22;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   font-family: Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
